feat: enhance Patient entity with comprehensive validation and 100% test coverage
- Apply consistent string validation pattern to all Patient setters:
  - trim(), normalize blank/empty to null, validate length/pattern, set once
  - medicalHistory, allergies, currentMedications, insuranceProvider
  - insurancePolicyNumber, emergencyContactName, emergencyContactPhone
  - primaryCarePhysician
- Remove @Pattern annotations from nullable fields (insurancePolicyNumber, emergencyContactPhone)
- Change customData field from String to JsonNode to match JSONB database column
- Add comprehensive validation tests for all Patient entity setters:
  - testMedicalHistoryField() - covers lines 95, 96, 98
  - testAllergiesField() - covers lines 109, 111, 112
  - testHelperMethodsPartialData() - covers lines 235, 245
  - All validation failure paths and null handling scenarios
- Update helper methods to work with normalized null values
- All 13 PatientEntityTest tests passing with comprehensive coverage

Coverage improvements:
- Lines 95-96, 98: medicalHistory setter null handling and normalization
- Lines 109, 111-112: allergies setter null handling and normalization
- Lines 235, 245: helper method coverage with partial data scenarios